--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
    <meta charset="utf-8">
-   <title>Solve-it Suduko</title>
+   <title>Solve-it Sudoku</title>
    <style>
 	h1 {
 		text-align: center;
@@ -40,7 +40,7 @@
    </style>
 </head>
 <body>
-	<h1>Solve-it Suduko</h1>
+	<h1>Solve-it Sudoku</h1>
 	<div id="container">
 	<div id="main">
 	<table>
@@ -226,7 +226,7 @@
 	</div>
 	</div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="sudko-solver.js"></script> 
+<script src="sudoku-solver.js"></script> 
 
    
 </body>
