--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 	<a class="button" id="solveit">Solve It!</a>
 	</div>
 	</div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="jquery-2.1.1.min.js"></script>
 <script src="sudoku-solver.js"></script> 
 
    
