--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
 	.button:hover {
 		background-color: #235578;
 	}
+	
+	[contenteditable="true"] {
+        -webkit-user-select: auto !important;
+        user-select: auto !important;  
+  }
    </style>
 </head>
 <body>
