testing fix for contenteditable bug

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<td>
 				<table>
 					<tr>
-						<td contenteditable="true" id="1"></td>
+						<td><p contenteditable="true" id="1"></p></td>
 						<td contenteditable="true" id="2">9</td>
 						<td contenteditable="true" id="3"></td>
 					</tr>
