testing fix for contenteditable bug

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         -webkit-user-select: auto !important;
         user-select: auto !important;  
   }
+	li {
+		list-style: none;
+	}
    </style>
 </head>
 <body>
@@ -53,7 +56,7 @@
 			<td>
 				<table>
 					<tr>
-						<td><p contenteditable="true" id="1"></p></td>
+						<td><li contenteditable="true" id="1"></li></td>
 						<td contenteditable="true" id="2">9</td>
 						<td contenteditable="true" id="3"></td>
 					</tr>
