fix background color for unchangeable

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		border-color: red;
 	}
 	
-	.untxtBox {
+	.unchangeable {
 		font-family: serif;
 		font-style: oblique;
 		background-color: #eee;
